--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 	<head> </head>
 	<body> 
 		<h1> How are you doing ya shakh Anas ? </h1>	
+		<h1> How are you doing ya shakh Anas ? </h1>	
 	</body> 
 </html> 
